--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<html>
+<!DOCTYPE html>
+<html lang="de">
 	<head>
 		<title>Test 4</title>
 	</head>
+	<script>
+		// Workaround vue error expecting process from node
+		// window.process = { env: {} };
+	</script>
 	<body>
 		<!-- Begin Vue app -->
 		<div id="vuetest"></div>
-		<!-- Include our Vue app. See file content for more details. -->
+		<script type="importmap">
+			{
+				"imports": {
+					"vue": "./classes/vue.esm-browser.js",
+					"vue-router": "./classes/vue-router.esm-browser.js"
+				}
+			}
+		</script>
 		<script src="./myscript.js" type="module"></script>
 		<!-- // End Begin Vue app -->
 	</body>
